cleanup and examples